# term-ascii-diagram

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/term_ascii_diagram/: core.py  diagram.py  main.py  status_bar.py
