[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "term-ascii-diagram"
dynamic = ["version"]
authors = [
  { name="Amir Karimi", email="me@amirkarimi.dev" },
]
description = "Build ASCII diagrams in terminal using keyboard."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/amirkarimi/term-ascii-diagram"
Issues = "https://github.com/amirkarimi/term-ascii-diagram/issues"

[project.scripts]
term-ascii-diagram = "term_ascii_diagram.main:cli"

[tool.hatch.version]
source = "vcs"
